fixed testimonials layout on mobile.

--- a/css/landing/testimonials.less
+++ b/css/landing/testimonials.less
@@ -7,10 +7,6 @@ section.testimonials.full-width {
             @media screen and (max-width: @SMARTPHONE_MAX_PORTRAIT) { .row(11); }
             .testimonial {
                 .column(4);
-                @media screen and (max-width: @SMARTPHONE_MAX_PORTRAIT) { 
-                    .column(4,11); 
-                
-                }
                 &.left {
                     .push(1);
                 }
